fixed using overflow -x and -y

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@
         top: 0;
         right: 0;
         bottom: 0;
+        overflow-x: hidden;
+        overflow-y: auto;
         z-index: 0;
         opacity: 1;
     }
